--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@discordjs/opus": "^0.9.0",
     "@discordjs/voice": "^0.14.0",
+    "audio-mixer": "^2.1.4",
     "discord.js": "^14.7.1",
     "dotenv": "^16.0.3",
     "tweetnacl": "^1.0.3"
